k8s/postgres.yaml

apiVersion: apps/v1

kind: Deployment

metadata:

  name: postgres

  namespace: blog

spec:

  replicas: 1

  selector:

    matchLabels:

      app: postgres

  template:

    metadata:

      labels:

        app: postgres

    spec:

      containers:

      - name: postgres

        image: postgres:16

        ports:

        - containerPort: 5432

        volumeMounts:

        - name: data

          mountPath: /var/lib/postgresql/data

      volumes:

      - name: data

        persistentVolumeClaim:

          claimName: postgres-pvc

---

apiVersion: v1

kind: Service

metadata:

  name: db

  namespace: blog

spec:

  selector:

    app: postgres

  ports:

  - port: 5432

    targetPort: 5432
