k8s/ingress.yaml

apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: blog-ingress

  namespace: blog

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx

  rules:

  - host: blog.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: backend

            port:

              number: 8000
